# dazzle

./: .gitignore  CLAUDE.md  CMakeLists.txt  FILES  LICENSE  Makefile.comm  Makefile.comm.dist  Makefile.comm.in  Makefile.dist  Makefile.lib  Makefile.prog  Makefile.prog.dist  Makefile.prog.in  README.md  build.sh  configure  install.sh  msggen.pl  releasenotes.ps
cmake/: DazzleGenerate.cmake  RunRedirect.cmake  config.h.cmake
config/: configure.in
docsrc/: openjade.1  releasenotes.xml
dsssl/: fot.dtd  lineNumber.dsl  ps.dsl  ps.fot  ps.sgml  psalig.dsl  pscs.dsl  pscspb.dsl  pscspb.sgml  psemb.dsl  psempha.dsl  psglyp.dsl  psglyp2.dsl  psinc.dsl  psinc2.dsl  psmulti.dsl  psmulti2.dsl  psmulti3.dsl  psradical.dsl  pssbs.dsl  pssbsi.dsl  sps.dsl  sps.sgml  spsanch.dsl  spsanch.sgml
dsssl/examples/: psanch.dsl  psinc.dsl  psside.dsl  sps_css_mal.dsl  spsemb.dsl
dsssl/ok/: ps.dsl
grove/: CMakeLists.txt
jade/: CMakeLists.txt  Makefile.sub  RtfFOTBuilder.cxx  SgmlFOTBuilder.cxx  TransformFOTBuilder.cxx
opensp/: CMakeLists.txt  Makefile.am  Makefile.in  configure  msggen.pl.in  opensp-c11-using.patch
opensp/generic/: SGMLApplication.h
opensp/include/: CmdLineApp.h  OutputByteStream.h  OutputCharStream.h  types.h  xnew.h
opensp/lib/: ConsoleOutput.cxx  Parser.h
spgrove/: CMakeLists.txt  grove_inst.m4
style/: AlignedColumn.cxx  AlignedColumn.h  Anchor.cxx  Anchor.h  CMakeLists.txt  ColumnSetSequence.cxx  ColumnSetSequence.h  DssslApp.cxx  EmbeddedText.cxx  EmbeddedText.h  EmphasizingMark.cxx  EmphasizingMark.h  FOTBuilder.cxx  FOTBuilder.h  FlowObj.cxx  FlowObj_inst.m4  GlyphAnnotation.cxx  GlyphAnnotation.h  IncludedContainerArea.cxx  IncludedContainerArea.h  InheritedC.cxx  Interpreter.cxx  Interpreter.h  Makefile.sub  MultiLineInlineNote.cxx  MultiLineInlineNote.h  PageSequence.cxx  PageSequence.h  SideBySide.cxx  SideBySide.h  SideBySideItem.cxx  SideBySideItem.h  jade_version.h
